--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>小米官网</title>
-  <link rel="shortcut icon" href="<%= BASE_URL %>icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://m.mi.com/static/img/icons/apple-touch-icon-152x152.png" type="image/x-icon">
 </head>
 
 <body>
