--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>小米官网</title>
+  <title>小米商城-咱们的商城~~~</title>
   <link rel="shortcut icon" href="https://m.mi.com/static/img/icons/apple-touch-icon-152x152.png" type="image/x-icon">
 </head>
 
