--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="font-size:100px;">
 
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>小米官网</title>
   <link rel="shortcut icon" href="<%= BASE_URL %>icon.png" type="image/x-icon">
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
