--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<<<<<<< HEAD
   <title>小米官网</title>
+  <!-- <link rel="shortcut icon" href="https://m.mi.com/static/img/icons/apple-touch-icon-152x152.png" type="image/x-icon"> -->
   <link rel="shortcut icon" href="<%= BASE_URL %>icon.png" type="image/x-icon">
   <style>
     html,
@@ -15,10 +15,6 @@
       height: 100%;
     }
   </style>
-=======
-  <title>小米商城-咱们的商城~~~</title>
-  <link rel="shortcut icon" href="https://m.mi.com/static/img/icons/apple-touch-icon-152x152.png" type="image/x-icon">
->>>>>>> 39d62d65db394a69643d99c4f79119c6ceddb697
 </head>
 
 <body>
